tests/files/lexer_tests/should_fail/091.cmdr
//Should not parse due to missing semicolon
do echo hi; while (true)